<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="12dp"
    app:cardCornerRadius="16dp"
    app:cardElevation="6dp"
    app:cardBackgroundColor="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/tvAgregarNota"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/agregar_nota"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/titulo"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/etTituloNota"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ejemplo_tarea_profe_alexis"
            android:inputType="text"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contenido"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/etContenidoNota"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ejemplo_realizar_ejercicios_1_2_y_3"
            android:inputType="text"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fecha_de_creacion"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/etFechaNota"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Ejemplo: 07/12/2025"
            android:inputType="text"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/selecciona_la_categoria"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"/>

        <Spinner
            android:id="@+id/spinnerCategoria"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btnAgregarTarea"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_gravity="center_horizontal"
            android:text="Agregar Nota"
            android:backgroundTint="@color/black"/>


    </LinearLayout>

</androidx.cardview.widget.CardView>