<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="view.MainActivity">

    <TextView
        android:id="@+id/tvNoteBook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/notebook"
        android:textSize="30sp"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/tvBienvenido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvNoteBook"
        android:text="@string/bienvenido_a_tu_app_de_notas"
        android:textStyle="normal"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:gravity="center"/>

    <SearchView
        android:id="@+id/svBuscar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/tvBienvenido"
        android:layout_marginTop="15dp"/>

    <TextView
        android:id="@+id/tvFiltrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/svBuscar"
        android:text="@string/filtra_tus_notas_por_categoria"
        android:textStyle="normal"
        android:textSize="15sp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"/>

    <Spinner
        android:id="@+id/spinnerCategoria"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvFiltrar"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvNotes"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/spinnerCategoria"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="10dp"/>

    <ImageButton
        android:id="@+id/ibNota"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="60dp"
        android:src="@drawable/nota"
        android:backgroundTint="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageButton
        android:id="@+id/ibCategoria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="60dp"
        android:src="@drawable/categoria"
        android:backgroundTint="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>